--- a/src/components/projectcard.scss
+++ b/src/components/projectcard.scss
@@ -1,20 +1,33 @@
 .projectCardWrapper {
   box-sizing: border-box;
-  height: 300px;
-  width: 20%;
-  min-width: 300px;
+  height: 100%;
+  width: 300px;
   color: white;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(0, 0, 0, 0.5);
   margin: 20px;
 }
 
 .cardContent {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
 }
 
 .gray {
   background-color: gray;
+}
+
+.cardImage {
+  box-sizing: border-box;
+  border: 2px solid white;
+  width: 250px;
+  height: 200px;
+  overflow: hidden;
+}
+
+.cardImage img {
+  width: 100%;
 }
