--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -1,7 +1,7 @@
 .projectsWrapper {
 
   color: white;
-  background-attachment: fixed;
+  // background-attachment: fixed;
 background-image: url("./assets/sky.jpg");
 background-position: center;
 background-size: cover;
