--- a/src/components/titlecontainer.scss
+++ b/src/components/titlecontainer.scss
@@ -10,9 +10,9 @@ p {
   height: 600px;
   width: 100%;
   background-image: url('./assets/sky.jpg');
-  background-attachment: fixed;
+  // background-attachment: fixed;
   background-position: center;
-  background-size: cover;
+  background-size: 100%;
   background-repeat: no-repeat;
   color: white;
   font-family: 'Permanent Marker', cursive;
@@ -50,8 +50,7 @@ p {
 }
 
 .name {
-  position: relative;
-  bottom: 40px;
+margin-bottom: 50px;
 }
 
 .tedReading {
